--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ h1{
     border-width:1px;
     border-color:#000;
     text-align:center;
-
     transition: all 0.2s linear;
     background: linear-gradient(to top, #56B870 0%,#a5c956 100%);
     
@@ -172,6 +171,8 @@ background: linear-gradient(90deg, rgba(206,233,255,1) 0%, rgba(233,233,233,1) 2
 }
 
 .sliderLabel {
+    color: #110911;
+
 
 }
 
@@ -179,7 +180,7 @@ background: linear-gradient(90deg, rgba(206,233,255,1) 0%, rgba(233,233,233,1) 2
     width: 45%;
     height: 15px;
     border-radius: 5px;  
-    background: #d3d3d3;
+    background: #d3d3d3; 
     outline: none;   
 }
 
