--- a/game.css
+++ b/game.css
@@ -1,15 +1,9 @@
 
 body {
-	font-family: "Luckiest Guy";
+	font-family: 'Amatic SC', cursive;
 	text-align: center;
-	background-image: linear-gradient(
-		to right top,
-		#051937,
-		#004d7a,
-		#008793,
-		#00bf72,
-		#a8eb12
-	);
+	background-image: rgb(203,128,65);
+    background: linear-gradient(90deg, rgba(203,128,65,1) 0%, rgba(255,211,133,1) 53%, rgba(182,131,61,1) 100%);
 	height: 100vh;
 	line-height: 1;
 }
@@ -27,7 +21,8 @@ header > div {
 	font-size: 3em;
 	text-shadow: 0 0 2px white;
 	border-radius: 1.5em;
-	padding: .25em .5em 0;
+    padding: .25em .5em 0;
+    font-family: 'Amatic SC', cursive;
 }
 button {
 	background: rgba(255, 255, 255, 0.85);
@@ -36,7 +31,9 @@ button {
 	padding: 1em;
 	margin: 0.5em;
 	box-shadow: 0 0 1em;
-	transition: 225ms;
+    transition: 225ms;
+    font-family: 'Amatic SC', cursive;
+    
 }
 button:active {
 	box-shadow: 0 0 0.5em;
@@ -61,13 +58,14 @@ button:focus {
 }
 #number {
 	font-size: 3em;
-	color: rgba(50, 50, 200, .95);
-	background-color: rgba(250, 200, 50, 0.95);
-	border: 0.25em dotted rgba(250, 50, 50, 0.95);
+	color: rgba(253, 194, 0, 0.95);
+	background-color: rgba(105, 131, 216, 0.774);
+	border: 0.25em dotted rgba(250, 237, 50, 0.95);
 	text-align: center;
 	padding: 1em;
 	margin: 0.5em auto;
-	max-width:15em;
+    max-width:15em;
+    font-family: 'Amatic SC', cursive;
 }
 #gameover {
 	display: none;
@@ -80,14 +78,34 @@ button:focus {
 	text-align: center;
 }
 #gameover h1 {
-	font-size: 5em;
+    font-size: 5em;
+    font-family: 'Amatic SC', cursive;
 }
 #gameover h2 {
-	font-size: 4em;
+    font-size: 4em;
+    font-family: 'Amatic SC', cursive;
 }
 #gameover div {
-	font-size: 3em;
+    font-size: 3em;
+    font-family: 'Amatic SC', cursive;
 }
 #gameover .finalscore {
-	font-size: 4em;
+    font-size: 4em;
+    font-family: 'Amatic SC', cursive;
+}
+
+h3 {
+    font-size: 2em;
+    color:black 
+}
+
+#back {
+	background-color: rgba(0, 200, 50, 0.3);
+    border: 5px solid;
+    text-decoration: none;
+}
+
+#back a {
+    text-decoration: none;
+    color: black;
 }
