--- a/style.css
+++ b/style.css
@@ -52,11 +52,12 @@ background: linear-gradient(90deg, rgba(203,128,65,1) 0%, rgba(255,211,133,1) 53
 }
 
 h1{
+    padding-top: 20px;
     text-align: center;
-    font-size: 3em;
+    font-size: 5em;
     color: rgb(247, 244, 244);
     font-family: 'Indie Flower', cursive;
-    text-shadow: 2px 2px #613b0996;
+    text-shadow: 2px 2px #3b250796;
 }
 
 #elements {
@@ -168,6 +169,7 @@ background: linear-gradient(90deg, rgba(203,128,65,1) 0%, rgba(255,211,133,1) 53
 }
 
 
+
 #elWidth {
     width: 30%;
     height: 15px;
@@ -243,6 +245,35 @@ h3 {
     font-weight: bold;
     transition: 0.3s;
 }
+
+#game {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #464646;
+    color: #fff;
+    font-weight: bold;
+    transition: 0.3s;
+    text-align: center;
+    display: inline-block;
+    
+}
+
+#game:hover {
+    background-color: #f0ca22ef;
+    
+}
+
+  #gameBox a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: rgba(255, 253, 253, 0.842);
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 20px;
+    position:absolute
+
+  }
 
 #generate:hover {
     background-color: #f0ca22ef;
